re-index projectentry on modification update index.html template for work publication

--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -184,7 +184,7 @@ geeft een array van user id's</li>
 <code>PUT</code> <code>/projects/{project_id}/multipleentrysettings</code></p>
 
 <pre><code>{
-  "projectEntityIds" : [1,2,3],
+  "projectEntryIds" : [1,2,3],
   "settings" : {
     "Publishable" : false,
     "field1" : "value1",
@@ -330,114 +330,130 @@ De post komt meteen terug met een <code>Location</code> waarop de voortgang uitg
 
 <hr />
 
-<p><!--</p>
-
-<h2>TODO</h2>
-
-<ul>
-<li>annotationTypes groeperen</li>
-<li>projectType: CKCC</li>
-<li>milestones plaatsen: chapter/page/etc.</li>
-<li>behalve publishable ook published als metadata op de entry
--->
 <!--
+## TODO
+
+- annotationTypes groeperen
+- projectType: CKCC
+- milestones plaatsen: chapter/page/etc.
+- behalve publishable ook published als metadata op de entry
+-->
+
+  <!--
 eb=http://10.152.32.82:2013
-eb=http://rest.elaborate.huygens.knaw.nl</li>
-</ul>
+eb=http://rest.elaborate.huygens.knaw.nl
 
-<p>rootcode=<code>curl --silent --show-error --data "username=root&amp;password=toor" $eb/sessions/login/|jq -r ".token"</code>; echo $rootcode
+rootcode=`curl --silent --show-error --data "username=root&password=toor" $eb/sessions/login/|jq -r ".token"`; echo $rootcode
+rootcode=`curl --silent --show-error --data "username=root&password=d3gelijk" $eb/sessions/login/|jq -r ".token"`; echo $rootcode
+
 curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -d '{"term":"deus","textLayers":["Diplomatic"],"searchInAnnotations":"true"}' $eb/projects/17/search/
-curl -v -H "Authorization: SimpleAuth $rootcode"  $eb/projects/1/search/201|jq "."</p>
+curl -v -H "Authorization: SimpleAuth $rootcode"  $eb/projects/1/search/201|jq "."
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects|jq "."
-curl -i -H "Authorization: SimpleAuth $rootcode" -X OPTIONS $eb/projects</p>
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects|jq "."
+curl -i -H "Authorization: SimpleAuth $rootcode" -X OPTIONS $eb/projects
 
-<p>project<em>id=1
-curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project</em>id|jq "."
-curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project<em>id/settings|jq "."
-curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project</em>id/entrymetadatafields|jq "."
-curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project<em>id/annotationtypes|jq "."
-curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project</em>id/users|jq "."
-curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/statistics|jq "."</p>
+project_id=1
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id|jq "."
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/settings|jq "."
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entrymetadatafields|jq "."
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/annotationtypes|jq "."
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/users|jq "."
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/statistics|jq "."
 
-<h1>create project</h1>
+# create project
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d "{\"title\":\"Project X ($(date))\", \"textLayers\":[\"Diplomatic\"]}" $eb/projects
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d "{\"title\":\"Project X ($(date))\", \"textLayers\":[\"Diplomatic\"]}" $eb/projects</p>
+# update project settings
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"Type":"Brievenproject","Version":"0.1","Start date":"nu","Release date":"onbekend"}' $eb/projects/$project_id/settings
 
-<h1>update project settings</h1>
+# ProjectMetadataField
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projectmetadatafields|jq "."
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d '{"fieldName":"EntryDescription"}' $eb/projectmetadatafields
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"Type":"Brievenproject","Version":"0.1","Start date":"nu","Release date":"onbekend"}' $eb/projects/$project_id/settings</p>
+# project users
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/users/$user_id|jq "."
 
-<h1>ProjectMetadataField</h1>
+# project tei export
+curl -i -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/tei
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projectmetadatafields|jq "."</p>
 
-<h1>project users</h1>
+# read users
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/users|jq "."
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project<em>id/users/$user</em>id|jq "."</p>
+# create user
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d '{"username":"new_user","email":"new.user@huygens.knaw.nl","firstName":"New","lastName":"User","role":"USER","password":"laswysdfas23"}' $eb/users
 
-<h1>project tei export</h1>
+# read user
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/users/$user_id|jq "."
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/tei</p>
+# update user
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"email":"new.user@example.com","firstName":"John","lastName":"Doe"}' $eb/users/$user_id
 
-<h1>read users</h1>
+# delete user
+curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/users/$user_id
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/users|jq "."</p>
 
-<h1>create user</h1>
+curl -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/projectusers|jq "."
+curl -i -H "Authorization: SimpleAuth $rootcode" -X PUT $eb/projects/$project_id/projectusers/$user_id
+curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/projects/$project_id/projectusers/$user_id
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d '{"username":"new_user","email":"new.user@huygens.knaw.nl","firstName":"New","lastName":"User","role":"USER","password":"laswysdfas23"}' $eb/users</p>
+# loglines
+curl -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/logentries|jq "."
 
-<h1>read user</h1>
+# project entries
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries|jq "."
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/users/$user_id|jq "."</p>
+# add project entry
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -d '{"name":"project-unique entryname"}' $eb/projects/$project_id/entries
 
-<h1>update user</h1>
+# update project entry
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"name":"new project-unique entryname"}' $eb/projects/$project_id/entries/$entry_id
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"email":"new.user@example.com","firstName":"John","lastName":"Doe"}' $eb/users/$user_id</p>
+# delete project entry
+curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/projects/$project_id/entries/$entry_id
 
-<h1>delete user</h1>
+# project entry facsimiles
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries/$entry_id/facsimiles|jq "."
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/users/$user_id</p>
+# project entry transcriptions
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries/$entry_id/transcriptions|jq "."
 
-<p>curl -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project<em>id/projectusers|jq "."
-curl -i -H "Authorization: SimpleAuth $rootcode" -X PUT $eb/projects/$project</em>id/projectusers/$user<em>id
-curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/projects/$project</em>id/projectusers/$user_id</p>
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries/$entry_id/transcriptions/$transcription_id|jq "."
 
-<h1>loglines</h1>
+#add transcription
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d '{"body":"dit is mijn lichaam","textLayer":"layer"}' $eb/projects/$project_id/entries/$entry_id/transcriptions
 
-<p>curl -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/log|jq "."</p>
+#update transcription
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"body":"brand new body<br/>one time only"}' $eb/projects/$project_id/entries/$entry_id/transcriptions/$transcription_id
 
-<h1>project entries</h1>
+# project entry setting
+curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries/$entry_id/settings|jq "."
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries|jq "."</p>
+# delete entry
+curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/projects/$project_id/entries/$entry_id
 
-<h1>project entry transcriptions</h1>
+# update entry settings
+curl -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"field1":"value1","field2":"value2"}'$eb/projects/$project_id/entries/$entry_id/settings|jq "."
 
-<p>curl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project<em>id/entries/$entry</em>id/transcriptions|jq "."</p>
+# update entry settings for multiple entries
+curl -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"projectEntryIds":[1,2,3],"settings":{"Publishable":false,"field1":"value1","field2":"value2"}}' $eb/projects/$project_id/multipleentrysettings|jq "."
 
-<h1>project entry setting</h1>
+# publish project
+curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d "{}" $eb/projects/$project_id/publication
+curl -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/publication/$status_id | jq "."
 
-<p>scurl -s -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project<em>id/entries/$entry</em>id/settings|jq "."</p>
 
-<h1>delete entry settings</h1>
+curl -H "Content-Type: application/json" -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries/17152/transcriptions/21224|jq "."
+curl -H "Content-Type: application/json" -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project_id/entries/17152/transcriptions/21224/annotations|jq "."
+curl -v -H "Content-Type: application/json" -H "Authorization: SimpleAuth $rootcode" -X POST -d '{"body":"whatever"}'  $eb/projects/$project_id/entries/17152/transcriptions/21224/annotations
+curl -v -H "Content-Type: application/json" -H "Authorization: SimpleAuth $rootcode" -X POST -d '{"body":"whatever", "typeId":1}'  $eb/projects/$project_id/entries/17152/transcriptions/21224/annotations
+curl -v -H "Content-Type: application/json" -H "Authorization: SimpleAuth $rootcode" -X POST -d '{"body":"whatever", "typeId":31, "metadata":{"person id":"PERSONID"}}'  $eb/projects/$project_id/entries/17152/transcriptions/21224/annotations
 
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -X DELETE $eb/projects/$project<em>id/entries/$entry</em>id</p>
+curl -v -H "Content-Type: application/json" -H "Authorization: SimpleAuth $rootcode" -X PUT -d '{"body":"whatever", "typeId":1}'  $eb/projects/$project_id/entries/17152/transcriptions/21224/annotations/aa
+-->
 
-<h1>update entry settings</h1>
-
-<p>curl -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"field1":"value1","field2":"value2"}'$eb/projects/$project<em>id/entries/$entry</em>id/settings|jq "."</p>
-
-<h1>update entry settings for multiple entries</h1>
-
-<p>curl -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X PUT -d '{"projectEntityIds":[1,2,3],"settings":{"Publishable":false,field1":"value1","field2":"value2"}}' $eb/projects/$project_id/multipleentrysettings|jq "."</p>
-
-<h1>publish project</h1>
-
-<p>curl -i -H "Authorization: SimpleAuth $rootcode" -H "Content-Type: application/json" -X POST -d "{}" $eb/projects/$project<em>id/publication
-curl -H "Authorization: SimpleAuth $rootcode" $eb/projects/$project</em>id/publicationstatus/$status_id | jq "."</p>
-
-<p>= annotatietab
+<p><!-- <br />
+= annotatietab
 facet: type</p>
 
 <p>indexeren:
@@ -470,4 +486,4 @@ annotationtype.strike.description = De annotatietypebeschrijving voor <strike> i
 project entries aanmelden bij oaipmh</p>
 
 <p>-->
-Last updated: 2013-10-11</p>
+Last updated: 2013-10-15</p>
