Update projectusers by PUTting a new userid array

--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -102,9 +102,14 @@ specifieke:
 <h4>project users</h4>
 
 <ul>
-<li>Read/opvragen:
+<li><p>Read/opvragen:
 <code>GET</code> naar <code>/projects/{project_id}/projectusers</code>
-geeft een array van user id's</li>
+geeft een array van user id's</p></li>
+<li><p>Update/bijwerken: <br />
+<code>PUT</code> naar <code>/projects/{project_id}/projectusers</code></p>
+
+<pre><code>  [1,2,3]
+</code></pre></li>
 </ul>
 
 <h4>project settings</h4>
@@ -486,4 +491,4 @@ annotationtype.strike.description = De annotatietypebeschrijving voor <strike> i
 project entries aanmelden bij oaipmh</p>
 
 <p>-->
-Last updated: 2013-10-15</p>
+Last updated: 2013-10-29</p>
