--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -304,7 +304,7 @@ geeft een array van user id's</p></li>
 
 <h2>publication</h2>
 
-<p>De <em>projectleader</em> of <em>admin user</em> mag publiceren via een <code>POST</code> naar <code>/projects/{project_id}/publication</code></p>
+<p>De <em>projectleader</em> of <em>admin user</em> mag publiceren via een <code>POST</code> naar <code>/projects/{project_id}/draft</code></p>
 
 <p>Je kunt een json setting meeposten:</p>
 
