--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -85,6 +85,16 @@ specifieke:
 <code>DELETE</code>  <code>/projects/{project_id}</code></p></li>
 </ul>
 
+<h4>project textlayers</h4>
+
+<ul>
+<li><p>project settings updaten: <br />
+<code>PUT</code> naar <code>/projects/{project_id}/textlayers</code></p>
+
+<pre><code>  [ "first","second","third" ]
+</code></pre></li>
+</ul>
+
 <h4>project annotationtypes</h4>
 
 <ul>
