catch and log exceptions in the PublishTask

--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -335,6 +335,7 @@ De post komt meteen terug met een <code>Location</code> waarop de voortgang uitg
 <ul>
 <li><code>id</code> - het id van de publicatieactie</li>
 <li><code>done</code>  - boolean die aangeeft of het aanmaken van de publicatie klaar is</li>
+<li><code>fail</code>  - boolean die aangeeft of het aanmaken van de publicatie onderbroken is door een error, de oorzaak is gelogd in de loglines</li>
 <li><code>url</code> - zodra de het publicatieproces done is staat hierin het url waarop de publicatie te zien is.</li>
 <li><code>loglines</code> - een array van logregels die aangeven waar het publicatieproces mee bezig is, met timestamps.</li>
 </ul>
