--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -380,6 +380,36 @@ geeft een array van user id's</p></li>
 <code>DELETE</code>  <code>/projects/{project_id}/entries/{entry_id}/transcriptions/{transcription_id}/annotations/{annotation_id}</code></p></li>
 </ul>
 
+<h3>search</h3>
+
+<ul>
+<li><p>Create: <br />
+<code>POST</code> naar <code>/projects/{project_id}/search</code></p>
+
+<pre><code>    {
+      "term" : "*",
+      "caseSensitive" : false,
+      "fuzzy" : false,
+      "searchInTranscriptions" : true,
+      "textLayers" : [ ],
+      "searchInAnnotations" : false,
+      "sort" : null,
+      "sortDir" : "asc",
+      "ascending" : true,
+      "facetFields" : [ ],
+      "facetInfoMap" : null,
+      "orderLevels" : [ ],
+      "level1Field" : "name",
+      "level2Field" : "name",
+      "level3Field" : "name",
+      "textFieldsToSearch" : { },
+      "facetValues" : [ ]
+    }
+</code></pre></li>
+<li><p>Read/opvragen: <br />
+<code>GET</code> <code>/projects/{project_id}/search/{search_id}</code></p></li>
+</ul>
+
 <hr />
 
 <h2>publication</h2>
