--- a/elab4-backend/src/main/resources/static/notes.html
+++ b/elab4-backend/src/main/resources/static/notes.html
@@ -270,9 +270,9 @@ geeft een array van user id's</p></li>
   }
 </code></pre>
 
-<p>als prev=-1, dan is entry {entry<em>id} de eerste.
-als next=-1, dan is entry {entry</em>id} de laatste.
-De entryids zijn gesorteerd op de alfabetische volgorde van de inhoud van de metadatavelden zoals gedefinieerd in project.level1, project.level2 en project.level3, en daarna op entryname </p></li>
+<p>als <code>prev=-1</code>, dan is entry <code>{entry_id}</code> de eerste.<br>
+als <code>next=-1</code>, dan is entry <code>{entry_id}</code> de laatste.<br>
+De entryids zijn gesorteerd op de alfabetische volgorde van de inhoud van de metadatavelden zoals gedefinieerd in project.level1, project.level2 en project.level3, en daarna op entryname. </p></li>
 <li><p>entrysettings opvragen: <br />
 <code>GET</code> <code>/projects/{project_id}/entries/{entry_id}/settings</code></p></li>
 <li><p>entrysettings bijwerken: <br />
